--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ async-timeout==4.0.3
 attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.3
+beautifulsoup4==4.12.3
 bitsandbytes==0.43.1
+bs4==0.0.2
 build==1.2.1
 cachetools==5.3.3
 certifi==2024.6.2
@@ -128,6 +130,7 @@ safetensors==0.4.3
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 starlette==0.37.2
 sympy==1.12.1
 tenacity==8.3.0
